sumo/tests/sumo/output/meandata_lanebased/errors/missing_end_divider/errors.sumo
Error: While processing option 'dump-ends':
 Empty element occured in 1019,
Error: Could not parse commandline options.
Quitting (on error).
